--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 {% load static %}
 {% load livereload_tags %}
 {% livereload_script %}
+{% load django_template_maths %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
