--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -50,18 +50,23 @@
                     <th class="col-sm-1">  Cukor választás / adag </th>                    
                     <th class="col-sm-1">  Tej választás / adag </th>                    
                     <th class="col-sm-1">  Ízesítő választás / adag </th>                    
-                    <th class="col-sm-1">                        
+                    <th class="col-sm-1">   
+                        {% if user.is_staff %}
+                            <a class="btn btn-danger btn-sm m-1" href="{% url 'shop:coffee_make_remove' pk=coffee.pk %}">
+                                <span class="fa fa-trash-o"></span></a>
+                            <a class="btn btn-primary btn-sm m-1" 
+                            hx-get="{% url 'shop:coffee_make_time' pk=coffee.pk %}"
+                            hx-target="#dialog" >
+                                <span class="fa fa-clock-o"></span></a>
+                        {% endif %}
+
                         {% if user.is_authenticated and coffee.c_make_dose >= 0.5 %}
-                        <a class="btn btn-primary btn-sm" href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}">
+                        <a class="btn btn-primary btn-sm m-1" href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}">
                             <span class="fa fa-shopping-basket"> Foglalok </span></a>
                         {% else %}
                             <th>Betelt</th>
                         {% endif %}
 
-                        {% if user.is_staff %}
-                            <a class="btn btn-danger btn-sm" href="{% url 'shop:coffee_make_remove' pk=coffee.pk %}">
-                                <span class="fa fa-trash"></span></a>
-                        {% endif %}
                     </th>
                     
                 </tr>
@@ -93,9 +98,35 @@
     </div>
     {% endfor %}
 </div>
+
+<!-- The Modal -->
+
 <br><br><br><br><br>
+
 <p>
     This was the last point when I can not use JawaScript 2022.05.30
 </p>
-     
+<h1>Items list</h1>
+    <!-- Placeholder for the modal -->
+    <div id="modal" class="modal fade">
+        <div id="dialog" class="modal-dialog modal-dialog-centered" hx-target="this"></div>
+    </div>
+  
+    <!-- Empty toast to show the message -->
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+            <div id="toast-body" class="toast-body"></div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+  
+  
+    <!-- Scripts: Bootstraps, HTMX, and custom JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/htmx.org@1.6.1/dist/htmx.min.js"></script>
+    <script src="{% static "dialog.js" %}"></script>
+    <script src="{% static "toast.js" %}"></script>
+
 {% endblock%}
