--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -52,7 +52,7 @@
                     <th class="col-sm-1">  Ízesítő választás / adag </th>                    
                     <th class="col-sm-1">   
                         {% if user.is_staff %}
-                            <a class="btn btn-danger btn-sm m-1" href="{% url 'shop:coffee_make_remove' pk=coffee.pk %}">
+                            <a class="btn btn-danger btn-sm m-1" href="{% url 'shop:coffee_make_remove' pkey=coffee.pk %}">
                                 <span class="fa fa-trash-o"></span></a>
                             <a class="btn btn-primary btn-sm m-1" 
                             hx-get="{% url 'shop:coffee_make_time' pk=coffee.pk %}"
