BUG: Integrity error UNIQUE const: (unique=False)

--- a/shop/templates/shop/c_error.html
+++ b/shop/templates/shop/c_error.html
@@ -24,8 +24,13 @@
 <div class="container pt-2">
 
         <h1> Page of error (else print) </h1>
-        <h2> {{coffee4}} </h2>
-        <h4> {{adat}}</h4>
+        <h2>coffes: {{coffees}} </h2>
         <br>
-
-{% endblock%}
+        
+        <h4>wares: {{wares}}</h4>
+        <h4>proba: {{proba}}</h4>
+        <h4>adat: {{adat}}</h4>
+        <br>
+        
+        <h4>form:{{form.as_p}}</h4>
+        {% endblock%}
