--- a/shop/templates/shop/c_error.html
+++ b/shop/templates/shop/c_error.html
@@ -30,7 +30,9 @@
         <h4>wares: {{wares}}</h4>
         <h4>proba: {{proba}}</h4>
         <h4>adat: {{adat}}</h4>
+        <h4>adat2: {{adat2}}</h4>
+        <h4>adat3: {{adat3}}</h4>
         <br>
-        
+
         <h4>form:{{form.as_p}}</h4>
         {% endblock%}
