--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -103,13 +103,7 @@
 
 <br><br><br><br><br>
 
-<p>
-    This was the last point when I can not use JawaScript 2022.05.30
-</p>
-<h1>Items list</h1>
-
-  
-  
-
+<p> This was the last point when I can not use JawaScript 2022.05.30</p>
+<p> First use the Bootsrap modal 2022.06.15</p>
 
 {% endblock%}
