--- a/shop/templates/shop/c_time_form.html
+++ b/shop/templates/shop/c_time_form.html
@@ -23,7 +23,7 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Cancel
           </button>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="submit" class="save btn btn-primary">Save</button>
         </div>
     </div>
 
