--- a/shop/templates/shop/c_time_form.html
+++ b/shop/templates/shop/c_time_form.html
@@ -9,14 +9,18 @@
     <!-- Modal Header -->
     <div class="modal-header">
     <h4 class="modal-title">{{coffee4}}</h4>
+    <h4 class="modal-title">{{coffee4.c_make_ware}}</h4>
     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">×</button>
 </div>
 
 <!-- Modal body -->
 <div class="modal-body">
-        <p>Időpont módosítás</p>
-        <p> {{form.as_p}}</p>
-    </div>
+    <h4>adat: {{adat}}</h4>
+    <h4>adat2: {{adat2}}</h4>
+    <h4>adat3: {{adat3}}</h4>
+    <p>Időpont módosítás</p>
+    <p> {{form.as_p}}</p>
+</div>
     
     <!-- Modal footer -->
     <div class="modal-footer">
