--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -41,7 +41,7 @@
                         {{coffee.c_make_ware.ware_type.ware_brand}}, 
                         {{coffee.c_make_ware.ware_type.ware_brand_name}}</th>                   
                     <th class="col-sm-1">{{coffee.c_make_date}}</th>
-                    <th class="col-sm-1">  Kávé adag még:<br> {{coffee.c_make_dose}}</th>                    
+                    <th class="col-sm-1">  Kávé adag még: {{coffee.c_make_dose}}</th>                    
                     <th class="col-sm-2">  Cukor választás / adag </th>                    
                     <th class="col-sm-2">  Tej választás / adag </th>                    
                     <th class="col-sm-2">  Ízesítő választás / adag </th>                    
@@ -59,7 +59,7 @@
                         <a class="btn btn-primary btn-sm m-1" href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}">
                             <span class="fa fa-shopping-basket"> Foglalok </span></a>
                         {% else %}
-                            <th>Betelt</th>
+                            <p style="color:red; font-size: 24px;">Betelt</p>
                         {% endif %}
 
                     </th>
