--- a/shop/templates/shop/c_error.html
+++ b/shop/templates/shop/c_error.html
@@ -29,5 +29,9 @@
     </div>
 
     <h4>form:{{form.as_p}}</h4>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Rendben
+        </button>
 </div>
 {% endblock%}
