--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,8 @@
         <div class="row">
             <!-- Placeholder for the modal -->
             <div id="modal" class="modal fade">
-                <div id="dialog" class="modal-dialog modal-dialog-centered" hx-target="this"></div>
-            </div>
+                <div id="dialog" class="modal-dialog modal-lg modal-dialog-centered" hx-target="this"></div>
+            </div> 
 
 
     {% include "base/js.html" %}
