--- a/shop/templates/shop/coffee_home.html
+++ b/shop/templates/shop/coffee_home.html
@@ -13,41 +13,45 @@
           background-size: 100% 100%;
         }
         h2  {
-        text-align: center;
-        color: rgb(178, 169, 155);
+        text-align: left;
+        color: rgb(133, 82, 0);
         }
     </style>
 {% endblock %}  
 
 {% block content %}
 
-<div class="container pt-2 middle border">
-    <div class="col-sm-6 right border">
+<div class="container pt-2 middle ">
+    <div class="col-sm-6 right ">
         <h1> Kávé adatlaplap </h1>
-        <h4>{{wares}}</h4>
     </div>    
 </div>
 
 <div class="container sm-8 pt-2 ">
     <div class="row">
-        <div class="col-sm-3 right border">
+        <div class="col-sm-3 right ">
             <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_order' %}" {% endif %}>                
                 <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
                 style="width:200px;height:200px; border:5px solid; "; alt="choice">                 
             </a>
         </div>
-        <div class="col-sm-3 right border">
+        <div class="col-sm-3 right ">
             <a  {% if user.is_staff %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
                 <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
-                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">                 
+                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">               
             </a>
         </div>
-        <div class="col-sm-3 right border">
+        <div class="col-sm-3 right ">
             <a  {% if user.is_staff %} href="{% url 'shop:coffee_booking' %}" {% endif %}>                
                 <img src ="{% static '/image/coffe_book_1.png' %}" class="rounded" 
-                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">                 
+                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">              
             </a>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 right"><h2>Rendelés</h2></div>
+        <div class="col-sm-3 right"><h2>Főzés</h2></div>
+        <div class="col-sm-3 right"><h2>Könyvelés</h2></div>
     </div>
 </div>
 
