--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -47,12 +47,25 @@
                     <th class="col-sm-2">  Ízesítő választás / adag </th>                    
                     <th class="col-sm-1">   
                         {% if user.is_staff %}
-                            <a class="btn btn-danger btn-sm m-1" href="{% url 'shop:coffee_make_remove' pkey=coffee.pk %}">
-                                <span class="fa fa-trash-o"></span></a>
+                        {% for order in ordered %}
+                            {% if order.coffee_selected.id != coffee.id  %}
+                            <a class="btn btn-danger btn-sm m-1" 
+                                href="{% url 'shop:coffee_make_remove' pkey=coffee.pk %}"
+                                onclick="return confirm('Biztosan törölni akarja?')">
+                                <span class="fa fa-trash-o"></span>
+                            </a>
+                            {% else %}
+                            <a class="btn btn-outline-danger btn-sm m-1" 
+                                onclick="return confirm('Előbb törölje a foglalásokat!')">
+                            <span class="fa fa-trash-o"></span>
+                        </a>
+                            {% endif %}
+                        {% endfor %}    
                             <a class="btn btn-primary btn-sm m-1" 
-                            hx-get="{% url 'shop:coffee_make_time' pk=coffee.pk %}"
-                            hx-target="#dialog" >
-                                <span class="fa fa-clock-o"></span></a>
+                                hx-get="{% url 'shop:coffee_make_time' pk=coffee.pk %}"
+                                hx-target="#dialog" >
+                                <span class="fa fa-clock-o"></span>
+                            </a>
                         {% endif %}
 
                         {% if user.is_authenticated and coffee.c_make_dose >= 0.5 %}
