--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -41,22 +41,22 @@
                         {{coffee.c_make_ware.ware_type.ware_brand}}, 
                         {{coffee.c_make_ware.ware_type.ware_brand_name}}</th>                   
                     <th class="col-sm-1">{{coffee.c_make_date}}</th>
-                    <th class="col-sm-1">  Kávé adag még: {{coffee.c_make_dose}}</th>                    
-                    <th class="col-sm-2">  Cukor választás / adag </th>                    
-                    <th class="col-sm-2">  Tej választás / adag </th>                    
-                    <th class="col-sm-2">  Ízesítő választás / adag </th>                    
-                    <th class="col-sm-1">   
+                    <th class="col-sm-1">  Coffee portion also: {{coffee.c_make_dose}}</th>                    
+                    <th class="col-sm-2">  Sugar selection / portion </th>                    
+                    <th class="col-sm-2">  Milk selection / portion </th>                    
+                    <th class="col-sm-2">  Flavor selection / portion </th>  
+                    <th class="col-sm-2">   
                         {% if user.is_staff %}
                         {% for order in ordered %}
                             {% if order.coffee_selected.id != coffee.id  %}
                             <a class="btn btn-danger btn-sm m-1" 
                                 href="{% url 'shop:coffee_make_remove' pkey=coffee.pk %}"
-                                onclick="return confirm('Biztosan törölni akarja?')">
+                                onclick="return confirm('Are you sure you want to delete?')">
                                 <span class="fa fa-trash-o"></span>
                             </a>
                             {% else %}
                             <a class="btn btn-outline-danger btn-sm m-1" 
-                                onclick="return confirm('Előbb törölje a foglalásokat!')">
+                                onclick="return alert('Cancel reservations first!')">
                             <span class="fa fa-trash-o"></span>
                         </a>
                             {% endif %}
@@ -70,9 +70,9 @@
 
                         {% if user.is_authenticated and coffee.c_make_dose >= 0.5 %}
                         <a class="btn btn-primary btn-sm m-1" href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}">
-                            <span class="fa fa-shopping-basket"> Foglalok </span></a>
+                            <span class="fa fa-shopping-basket">I'm booking</span></a>
                         {% else %}
-                            <p style="color:red; font-size: 24px;">Betelt</p>
+                            <p style="color:red; font-size: 24px;">It's full</p>
                         {% endif %}
 
                     </th>
@@ -90,7 +90,7 @@
                     <td class="col-sm-2">{{order.sugar_choice}} <br>{{order.sugar_dose}}</td>
                     <td class="col-sm-2">{{order.milk_choice}} <br>{{order.milk_dose}}</td>
                     <td class="col-sm-2">{{order.flavour_choice}} <br>{{order.flavour_dose}}</td>
-                    <td class="col-sm-1">
+                    <td class="col-sm-2">
                         {% if user.is_staff %}
                         <a class="btn btn-danger btn-sm" 
                         href="{% url 'shop:coffee_order_remove' pk=order.pk %}"
