--- a/shop/templates/shop/c_time_form.html
+++ b/shop/templates/shop/c_time_form.html
@@ -8,16 +8,15 @@
 
     <!-- Modal Header -->
 <div class="modal-header">
-    <h4 class="modal-title">{{coffee4.c_make_ware}}</h4>
+    <h4 class="modal-title">{{adat}} - {{coffee4.c_make_ware}}</h4>
     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">×</button>
 </div>
 
 <!-- Modal body -->
 <div class="modal-body">
-    <h4>adat: {{adat}}</h4>
-    <h4>adat2: {{adat2}}</h4>
-    <h4>adat3: {{adat3}}</h4>
-    <p>Időpont módosítás</p>
+    <h4>Dose: {{adat2}}</h4>
+    <h4>Old Time: {{adat3}}</h4>
+    <p>Time Changing:</p>
     <p> {{form.as_p}}</p>
 </div>
     
