Little game with JawaScript Bootsrap Alert 2022.06.22

--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="col-sm-6 right">
-            <h1> Következő Kávézás: {{choice}}</h1>
+            <h1> Next Coffee Shop:</h1>
         </div>    
     </div>
 </div>
@@ -42,5 +42,6 @@
 
 <p> This was the last point when I can not use JawaScript 2022.05.30</p>
 <p> First use the Bootsrap modal 2022.06.15</p>
+<p> Little game with JawaScript Bootsrap Alert 2022.06.22</p>
 
 {% endblock%}
