--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
             <div id="dialog" class="modal-dialog modal-dialog-centered" hx-target="this"></div>
     </div> 
     <!-- Empty toast to show the message -->
-    <div class="toast-container d-flex justify-content-center align-items-center">
+    <div class="toast-container position-absolute top-50 start-50 p-3">
         <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="d-flex">
             <div id="toast-body" class="toast-body"></div>
