New Message Modal

--- a/shop/templates/shop/coffee_order.html
+++ b/shop/templates/shop/coffee_order.html
@@ -43,5 +43,6 @@
 <p> This was the last point when I can not use JawaScript 2022.05.30</p>
 <p> First use the Bootsrap modal 2022.06.15</p>
 <p> Little game with JawaScript Bootsrap Alert 2022.06.22</p>
+<p> New Universal Message Modal with htmx (hx-vals) 2022.06.27</p>
 
 {% endblock%}
