--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="modals-here"></div>
     <div class="page-header">
         <div class="row-md-1">
             <div class="col-md-12">
@@ -37,7 +38,7 @@
 
     <div class="row">
         <!-- Placeholder for the modal -->
-        <div id="modal" class="modal fade">
+        <div id="modalForm" class="modal fade">
             <div id="dialog" class="modal-dialog modal-dialog-centered" hx-target="this"></div>
     </div> 
     <!-- Empty toast to show the message -->
