--- a/shop/templates/shop/coffee_order_table.html
+++ b/shop/templates/shop/coffee_order_table.html
@@ -1,6 +1,15 @@
+{% load static %}
+<style>
+.table-scroll {
+    position: absolute;
+    overflow-y: scroll;
+    height: 250px;
+}
+</style>
 {% for coffee in coffees %}
     <div class="row-sm-12">
-        <table class="table table table-hover">
+    <div class="scrollme">
+        <table id="example" class="table table-scroll table-hover">
             <thead class="table-light">
                 <div id="demo"></div>
                 <div id="coffee{{coffee.id}}"></div>
@@ -19,21 +28,34 @@
                         {% if user.is_staff %} 
                             {% if coffee.c_order_yes %}
                                 <a class="btn btn-outline-danger btn-sm m-1" 
-                                    onclick=alertVisible({{coffee.id}})>
+                                    onclick=alertVisible({{coffee.id}})
+                                    title="Delete with condition">
                                 <span class="fa fa-trash-o"></span>
                                 </a>
                             {% else %}
                                 <a class="btn btn-danger btn-sm m-1" 
                                     href="{% url 'shop:coffee_make_remove' pkey=coffee.pk %}"
-                                    onclick="return confirm('Are you sure you want to delete?')">
+                                    onclick="return confirm('Are you sure you want to delete?')" 
+                                    title="Delete this coffe date">
                                     <span class="fa fa-trash-o"></span>
                                 </a>
                             {% endif %}
                             
                             <a class="btn btn-primary btn-sm m-1" 
                             hx-get="{% url 'shop:coffee_make_time' pk=coffee.pk %}"
-                            hx-target="#dialog">
+                            hx-target="#dialog"
+                            title="Change the date">
                             <span class="fa fa-clock-o"></span>
+                        </a>
+                        <a class="btn btn-secondary btn-sm m-1"
+                        href="#" 
+                        title="Popover Header"
+                        data-bs-trigger="hover"
+                        data-bs-toggle="popover"
+                        data-bs-placement="top"
+                        data-bs-content="Some content inside the popover"
+                        data-placement="top">
+                        <span class="fa fa-cog">Test Popover</span>
                         </a>
 
                         <a class="btn btn-danger btn-sm m-1" 
@@ -43,7 +65,7 @@
                             hx-trigger="click"
                             class="btn btn-primary"
 	                        _="on htmx:afterOnLoad wait 10ms then add .show to #modalMessenger then add .show to #modal-backdrop">
-                            <span class="fa fa-.fa-cog"> Test</span>
+                            <span class="fa fa-cog"> Test Modal</span>
                         </a>
                         <a class="btn btn-success btn-sm m-1" 
                             hx-get="{% url 'view_modal_mess' %}"
@@ -52,12 +74,14 @@
                             hx-trigger="click"
                             class="btn btn-primary"
 	                        _="on htmx:afterOnLoad wait 10ms then add .show to #modalMessenger then add .show to #modal-backdrop">
-                            <span class="fa fa-.fa-cog"> Test</span>
+                            <span class="fa fa-cog"> Test Modal</span>
                         </a>
                         {% endif %}
 
                         {% if user.is_authenticated and coffee.c_make_dose >= 0.5 %}
-                        <a class="btn btn-primary btn-sm m-1" href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}">
+                        <a class="btn btn-primary btn-sm m-1" 
+                        href="{% url 'shop:coffee_order_form' pkey=coffee.pk %}"
+                        title="Order a Coffe!">
                             <span class="fa fa-shopping-basket"> I'm booking</span></a>
                         {% else %}
                             <p style="color:red; font-size: 24px;">It's full</p>
@@ -82,7 +106,8 @@
                         {% if user.is_staff %}
                         <a class="btn btn-danger btn-sm" 
                         href="{% url 'shop:coffee_order_remove' pk=order.pk %}"
-                        onclick="return confirm('Biztosan törölni akarja?')">
+                        onclick="return confirm('Biztosan törölni akarja?')"
+                        title="Delete the ordered coffee">
                             <span class="fa fa-trash-o"></span></a>
                         {% endif %}
                     </td class="col-sm-1">
@@ -92,12 +117,20 @@
             </tbody>
         </table>
     </div>
+    </div>
 
     
       
 
 {% endfor %}
+<script src="{% static 'js/dialog.js' %}"></script>
 <script>
+    $(document).ready(function() {
+        $('#example').dataTable( {
+            "scrollY": true
+        } );
+    } );
+
     function alertVisible(elemID) {
         // var elemID = 0
         var posit = 'coffee'+ elemID.toString()
@@ -105,8 +138,7 @@
         document.getElementById(posit).innerHTML = divA
         
         $('#alertBox').fadeIn(500);
-        setTimeout(function() { $('#alertBox').fadeOut(800); document.getElementById(posit).innerHTML = ''}, 2000);
-        
+        setTimeout(function() { $('#alertBox').fadeOut(800); document.getElementById(posit).innerHTML = ''}, 2000);   
     }
 </script>
 
