--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == cart_home_url %}active{% endif %}">
-        <a class="nav-link nav-cart-count" href="{% url 'raw_material:acquisition_list' %}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
+        <a class="nav-link nav-cart-count" href="{% url 'proba' %}">{{ request.session.cart_items }} <i class="fas fa-shopping-cart"></i></a>
       </li>
 
       <li class="nav-item dropdown">
